# bask-pi

./: README.md  config.example.yaml  pyproject.toml  requirements.txt
bask/: __main__.py  config.py  main.py  secrets_store.py
bask/audio/: __init__.py  record.py  stt.py  tts.py
bask/calendar/: __init__.py  gcal.py
bask/camera/: __init__.py  snapshot.py
bask/llm/: __init__.py  clients.py  router.py
bask/llm/prompts/: bask_system.txt
bask/reminders/: __init__.py  store.py
bask/ui/: __init__.py  display.py
bask/vision/: __init__.py
bask/web/: __init__.py  app.py
docs/: HARDWARE_CHECKLIST.md  SECRETS.md
scripts/: gcal_auth.py
secrets/: profiles.example.json
systemd/: bask.service
