[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "bask-pi"
version = "0.1.0"
description = "Bask — Raspberry Pi AI assistant"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "httpx>=0.27.0",
  "pyyaml>=6.0.1",
  "Pillow>=10.0.0",
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "apscheduler>=3.10.4",
  "python-multipart>=0.0.9",
  "google-api-python-client>=2.150.0",
  "google-auth-oauthlib>=1.2.1",
  "google-auth-httplib2>=0.2.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["bask*"]

[project.scripts]
bask = "bask.main:main"
